// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RaceListing changes descending sort on click 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
          onClick={[Function]}
        >
          Series
          <span>
             
          </span>
          <span
            className="glyphicon glyphicon-triangle-bottom"
          />
        </th>
        <th
          className={null}
          id="raceListing-th-raceTimes"
          onClick={[Function]}
        >
          Race times
          <span>
             
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            167
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            iRacing ARCA Menards Series
          </div>
        </td>
        <td>
          <div>
            Every hour starting at 0:45 UTC
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            32
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            iRacing Advanced Legends Cup
          </div>
        </td>
        <td>
          <div>
            Every hour starting at 0:30 UTC
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            278
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            Fanatec GT Challenge
          </div>
        </td>
        <td>
          <div>
            Every 2 hours starting at 1:45 UTC
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            139
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            Fanatec Global Mazda MX-5 Cup
          </div>
        </td>
        <td>
          <div>
            Every hour starting at 0:00 UTC
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing changes sort on click 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
          <span
            className="glyphicon glyphicon-triangle-top"
          />
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
          onClick={[Function]}
        >
          Series
          <span>
             
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            139
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            Fanatec Global Mazda MX-5 Cup
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            278
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            Fanatec GT Challenge
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            32
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            iRacing Advanced Legends Cup
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            167
          </div>
        </td>
        <td
          className="clickableCell"
          onClick={[Function]}
        >
          <div>
            <span>
               
            </span>
            iRacing ARCA Menards Series
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders correctly 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
          <span
            className="glyphicon glyphicon-triangle-top"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            139
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            278
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            32
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            167
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders not found favourite cars 1`] = `
<p>
  No races this week match your favourite cars. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite series 1`] = `
<p>
  No races this week match your favourite series. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite tracks 1`] = `
<p>
  No races this week match your favourite tracks. Try turning the filter off or adding some.
</p>
`;
